# ds412-group-pit

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0-Assignment - Exponential Smoothing_.ipynb  1-Group-Assignment.ipynb
